# openadr-3-client

./: AGENTS.md  DESIGN.md  README.md
ai-stuff/: create-client-packages.md
golang/: README.md  client.go  go.mod  types.go
golang/example/: main.go
java/: BUILD_NOTES.md  GRADLE_CONVERSION.md  README.md  build.gradle  settings.gradle
java/src/main/java/com/openadr/client/: APIError.java  APIResponse.java  BasicTest.java  OADR3.java  OADR3Config.java
java/src/main/java/com/openadr/client/example/: ExampleUsage.java
java/src/main/java/com/openadr/client/model/: Event.java  IntervalPeriod.java  Program.java  Report.java  Ven.java
java/src/main/java/com/openadr/client/validation/: ValidationUtils.java
node/: README.md  build-spec.sh  package-lock.json  package.json  tsconfig.json
node-examples/openapi-codegen/: README.md
node-examples/openapi-generator/: README.md
node-examples/openapi-stack-axios/: README.md
node-examples/openapi-typescript-fetch/: README.md
node/src/: api.ts  client.ts  index.ts  oadr3.ts  openadr-types.ts  types.ts
node/src/components/: auth.ts  common.ts  events.ts  programs.ts  reports.ts  resources.ts  subscriptions.ts  vens.ts
node/src/openapi-typescript/: oadr3.ts
node/test/: README.md  package.json  test.auth.js  test.events.js  test.programs.js  test.reports.js  test.resources.js  test.subscriptions.js  test.vens.js
python/: BUILD_NOTES.md  README.md  pyproject.toml  test_basic_structure.py
python/examples/: basic_usage.py
python/src/openadr_client/: __init__.py  client.py  config.py  exceptions.py  models.py  validation.py
python/tests/: test_basic.py
rust/: Cargo.toml  README.md
rust/examples/: basic_usage.rs  programs_api.rs
rust/src/: client.rs  config.rs  error.rs  lib.rs  models.rs  validation.rs
zig/: README.md  build.zig  build.zig.zon
zig/examples/: basic_usage.zig  programs_api.zig
zig/src/: client.zig  config.zig  errors.zig  lib.zig  types.zig  validation.zig
